--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -62,6 +62,32 @@ header {
   color: var(--clr-dark);
 }
 
+.lightmode .nav-link {
+  color: var(--lightstate)
+}
+
+.lightmode .linkfooter {
+  color: var(--lightstate);
+  transition: .5s;
+  margin-right: 30px;
+  font-weight: 300;
+}
+
+.lightmode .small.text-muted {
+  color: var(--lightstate) !important;
+}
+
+.lightmode .small.text-muted.mb-0 {
+  color: var(--lightstate) !important;
+}
+
+.lightmode h5 {
+  color: var(--lightstate) !important;
+}
+
+
+
+
 .shadow {
   text-shadow: 1px 1px 5px black;
 }
@@ -72,7 +98,6 @@ header nav {
   font-family: Castoro Titling;
   font-weight: bold;
   font-size: 1em;
-  text-shadow: 0 5px 10px #0004;
 }
 
 /* header text link styling */
@@ -162,7 +187,7 @@ header nav {
   transition: .5s;
   margin-right: 30px;
   font-weight: 300;
-  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(0, 0, 0);
+
 }
 
 .linkfooter:hover {
