--- a/assets/css/splash.css
+++ b/assets/css/splash.css
@@ -18,7 +18,7 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    background-image: url();
+    background-image: url(../images/beginning\ of\ the\ End\ \(8\).png);
     background-size: 100% 100%;
     transition: 1s;
 }
