--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -1,3 +1,4 @@
+/* Media query for mainpage and splash page */
 /* media query for smaller screens - may need to adjust after testing */
 @media screen and (max-width: 500px) {
     header nav {
@@ -18,7 +19,12 @@
         font-size: 1.25em;
         letter-spacing: 1.3px;
     }
-
+    .slogan {
+        font-size: 30px;
+    }
+    .container {
+        background-color: none !important;
+    }
 }
     /* day button styling */
     .slider .list .item .buttons button {
@@ -53,6 +59,13 @@
         width: 40px;
         height: 40px;
     }
+    .slogan {
+        font-size: 30px;
+    }
+    .container {
+        font-size: 20px;
+        height: 35px;
+    }
 }
 
 @media screen and (min-width: 1025px) {
@@ -71,6 +84,13 @@
     }
     .arrowIcon button {
         width: 50px;
+        height: 50px;
+    }
+    .slogan {
+        font-size: 50px;
+    }
+    .container {
+        font-size: 30px;
         height: 50px;
     }
 }
@@ -97,6 +117,13 @@
         font-size: 2.6em;
         letter-spacing: 1.3px;
     }
+    .slogan {
+        font-size: 90px;
+    }
+    .container {
+        font-size: 50px;
+        height: 70px;
+    }
 }
 
 /* Media query for ultrawide screens  */
@@ -104,8 +131,14 @@
     .slider .list .item .content {
         padding-right: 8%;
     }
+    .slogan {
+        font-size: 100px;
+    }
+    .container {
+        font-size: 60px;
+        height: 80px;
+    }
 }
-
 
 /* - [ ]  media query break points
     - [ ]  mobile - 320px - 480px
